Fix about page grid alignment

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,6 +3,7 @@ $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url("https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg");
 $background-opacity: 0.9;
+$footer-height: 60px;
 
 // below based on nav elements in menu
 $num-nav-links: 4;
